# MDM-training-tool-Azure

./: .gitignore  MDM_Tool_Intro.py  README.md  common.tfvars  main.tf  mdm_tf_cicd_pipeline.yaml  outputs.tf  pr_pipeline.yml  pyproject.toml  variables.tf
database_module/: locals.tf  main.tf  outputs.tf  variables.tf
dns_module/: locals.tf  main.tf  outputs.tf  providers.tf  variables.tf
templates/steps/: azdo_git_tag.yaml  azdo_terraform_access_token.yaml
webapp_module/: locals.tf  main.tf  outputs.tf  providers.tf  variables.tf
webapp_module/demo/: demo.tf  variables.tf
