[tool.poetry]
name = "pycoe-mdm-training-tool"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.1"
pandas = "^2.2.1"
faker = "^24.0.0"
numpy = "^1.26.4"
recordlinkage = "^0.16"
timedelta = "^2020.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
